crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__alternates.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(r#\"{foo | bar | baz}\"#)"
---
{ foo
| bar
| baz
}@0
