crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__bool_literals.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(r#\"{true | false}\"#)"
---
{ true
| false
}@0
