crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__byte_literals.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(\"{b'foo' | b'bar\\nbaz' | b'qux\\\\'quux' | b'quy\\\\\\\\quz' | b'xyz\\\\zy' }\")"
---
{ x'666f6f'
| x'6261720a62617a'
| x'7175782771757578'
| x'7175795c71757a'
| x'78797a7a79'
}@0
