crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__compound_types.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(\"{ vector<vector<u8>> \\\n             | vector<0x1::string::String> \\\n             | vector<0x2::coin::Coin< 0x2::mys::MYS >> \\\n             | vector<3::validator::Validator> }\")"
---
{ vector@2<vector<u8>> []
| vector@23<0x0000000000000000000000000000000000000000000000000000000000000001::string::String> []
| vector@53<0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::mys::MYS>> []
| vector@96<0x0000000000000000000000000000000000000000000000000000000000000003::validator::Validator> []
}@0
